# mutishell

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: manual-windows-build.yml
docs/: AI_HANDOFF.md  LINUX_SUPPORT_FEASIBILITY.md  REVIEW_2026-06-26_CLOSE_ALL_AND_PASTE.md  TERMINAL_APPEARANCE_SETTINGS.md  TERMINAL_FILE_INPUT.md  TERMINAL_IME_DOCK_DEBUG.md  ZED_IME_COMPARISON.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: TerminalView.tsx
src/services/: tauriApi.ts
src/utils/: pasteManager.ts  terminalPaths.ts
