[package]
name = "mutishell"
version = "0.1.0"
description = "A native Windows project terminal launcher"
authors = ["mutishell"]
edition = "2021"

[lib]
name = "mutishell_lib"
crate-type = ["rlib"]

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.17"
tray-icon = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
